--- a/interests.html
+++ b/interests.html
@@ -5,16 +5,24 @@
   </head>  
   <body>
     <h1>This is the intrests page</h1> 
+    <h2> Mascara </h2>    
+    <h3> Eye Shadow </h3>
         <ul>
-      <li> <a href="bio.html"> Lips </a> </li>
-      <li> <a href="contact.html"> Nails</a> </li>
-      <li> <a href="index.html"> Home</a> </li>
+      <li id="paper" ><a href="bio.html"> Lips </a> </li>
+      <li id="love" ><a href="contact.html"> Nails</a> </li>
+      <li id="cup" ><a href="index.html"> Home</a> </li>
       </li>
       <li>
         
       </li>
     </ul>
-    
-    <img src="http://img.aws.livestrongcdn.com/ls-article-image-673/cme/cme_public_images/www_livestrong_com/photos.demandstudios.com/getty/article/241/195/481994926_XS.jpg" />
-  </body>
+    <img src="http://mac.h-cdn.co/assets/15/13/980x490/landscape-1427654703-eye-color.jpg"></img>
+  <p/> Eye shadow is a cosmetic that is applied on the eyelids and under the eyebrows. The average distance between eyelashes and eyebrows is twice as big in women as in men. Pale eye shadow visually enlarges this area and has a feminising effect.
+
+Eye shadow can be applied in a variety of ways depending upon the desired look. Typically application is done using sponges, fingers, and/or brushes. The most important aspect of applying eye shadow, and makeup in general, is blending well.
+
+To remove eye shadow, a commercial eye makeup remover may be used, though a face wash will usually remove all traces of colour. Generally it is easy to remove, and simple water and soap can be used. Eye shadow, eyeliner, and mascara may also be removed using baby oil or olive oil. There are also makeup wipes that may be used.</p>
+
+
+   </body>
 </html>
