--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       <li id= "chocolate" ><a href="contact.html"> Nails</a> </li>
       <li id= "drink" ><a href="interests.html"> Eyes </a> </li>
     </ul>
-  
-    <img src="https://media.tenor.co/images/4715c5aea0dd12a91a19621f5ea60536/tenor.gif"></img>
-  <img src="https://m.popkey.co/2f7bf8/9eY5e.gif"></img>
-  <img src="https://m.popkey.co/9e1b66/zJ3JD.gif"></img>
+   <div>
+       <img src="https://media.tenor.co/images/4715c5aea0dd12a91a19621f5ea60536/tenor.gif"></img>
+       <img src="https://m.popkey.co/2f7bf8/9eY5e.gif"></img>
+       <img src="https://m.popkey.co/9e1b66/zJ3JD.gif"></img>
+   </div>
   </body>
 </html>
